# VUT

2_semester/IOS/projekt/projekt 1/: wedi
2_semester/IOS/projekt/projekt 2/: proj2  proj2.c  proj2.out
2_semester/ITY/proj2/: Makefile  proj2.tex  test.sh
2_semester/ITY/proj3/zadani 3/: Makefile  proj3.tex  proj3.txt
2_semester/ITY/proj4/: Makefile  proj4.bib  proj4.tex
2_semester/ITY/proj5/: Makefile  proj5.tex
3_semester/IAL/proj2/COMPLETE/: c402.c
3_semester/IAL/proj2/c016/: c016-test  c016.c
3_semester/IAL/proj2/c401/: Makefile  c401-test  c401.c  c401.h  main  main.c
3_semester/IAL/proj2/c402/: c402-test  c402.c  c402.h  main.c
3_semester/IFJ/IFJ_ASSEMBLY/: oh.IFJcode18  ok.IFJcode18  program.ifj  run.sh  test.IFJcode18  test.java
3_semester/IFJ/IFJ_ASSEMBLY/Codes/: divide.IFJcode18  equal.IFJcode18  greater.IFJcode18  lesser.IFJcode18  minus.IFJcode18  multiply.IFJcode18  plus.IFJcode18  substr.IFJcode18
3_semester/IFJ/IFJ_FINAL/IFJ_Parser_POKUS/: main  test.sh  tests.tar.xz
3_semester/IFJ/IFJ_FINAL/IFJ_SCANNER/: Projekt.ifj  errCode.h  main  main.c  scanner.c  scanner.h  str.c  str.h
3_semester/IFJ/IFJ_FINAL/TESTOVANIE/: README  main  mazaclogu.sh  porjekt_tester.sh  testy
3_semester/IFJ/parser/: err_code.h  expression_parsing.c  expression_parsing.h  parser.h  prime.h  semantic.c  semantic.h  stack.c  str.c  str.h  test.sh
3_semester/IFJ/parser/TESTDIR/: Makefile  bin_struct.c  bin_struct.h  generate_code.c  generate_code.h  main  main.c  parser.c  prime.c  scanner.c  scanner.h  stack.h  symtable.c  symtable.h
3_semester/ISS/: moje_reseni.m
3_semester/ISS/Proj1/: 10.eps  12.eps  2.eps  3.eps  4.eps  5.eps  6.eps  8.eps  9.eps  protokol.tex  xskuta04.txt
3_semester/ISS/Proj1/include/: 10.eps  12.eps  2.eps  3.eps  4.eps  5.eps  6.eps  8.eps  9.eps
4_semester/ICP/: Makefile  main
4_semester/ICP/examples/: notace1.txt  notace2.txt  notace3.txt
4_semester/ICP/src/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake
4_semester/ICP/src/API/: main.cpp
4_semester/ICP/src/API/includes/: ChessGame.h  Globals.h
4_semester/ICP/src/API/includes/movement/: Figure.h  Square.h
4_semester/ICP/src/API/includes/parsing/: Parser.h
4_semester/ICP/src/API/movement/: ChessGame.cpp  Figure.cpp  Square.cpp
4_semester/ICP/src/API/parsing/: Parser.cpp
4_semester/ICP/src/GUI/: board.cpp  chess  chess_game.cpp  coordinates_graphic.cpp  dialog_graphic.cpp  game_menu.cpp  main.cpp  messageWindow.cpp  modebox_graphic.cpp  movebox_graphic.cpp  reset_graphic.cpp  speedbox_graphic.cpp
4_semester/ICP/src/GUI/includes/: board.h  chess_game.h  coordinates_graphic.h  dialog_graphic.h  game_menu.h  messageWindow.h  modebox_graphic.h  movebox_graphic.h  reset_graphic.h  speedbox_graphic.h
4_semester/ICP/src/chess_autogen/: moc_predefs.h  mocs_compilation.cpp
4_semester/ICP/src/chess_autogen/23SHELMGGJ/: moc_chess_game.cpp  moc_game_menu.cpp
4_semester/IPK/Projekt 1/: Readme.md  client  client.c  test  test.c  xskuta04
4_semester/IPK/Projekt 1 SAVE/: Makefile  Readme.md  client  client.c  server  test.sh  xskuta04  xskuta04.c
4_semester/IPK/Projekt 1/Demo/: Makefile  xskuta04.c
4_semester/IPK/Projekt2/: Makefile  main.c
4_semester/IPP/: ic18int
4_semester/IPP/Project_1/: Makefile  index.html  lexical_parser.php  parse.php  readme1.md  syntax_analyzator_parser.php  syntax_parser.php  test.src  test_argument_checker.php  test_file_executer.php  test_file_loader.php
4_semester/IPP/Project_1/Parse/: lexical_parser.php  parse.php
4_semester/IPP/Project_1/Python/: index.html  interpret.py  program_execution.py  program_syntax.py  readme2.md  test.out  test_file_executer.php  xml_loader.py
4_semester/IPP/Project_1/TESTDIR/: parse.php  (+7 more)
4_semester/IVS/Projekt1/: black_box_tests.cpp  tdd_code.h
4_semester/IZG/Projekt/: drawTriangles.cpp  phongMethod.c
4_semester/IZG/Projekt/IZG_PROJ/: CMakeLists.txt
4_semester/IZG/Projekt/IZG_PROJ/doc/html/: annotated.html  application_8h_source.html  bunny_8c.html  bunny_8h.html  bunny_8h_source.html  callbackAndData_8h_source.html  camera_8c.html  camera_8h.html  camera_8h_source.html  classes.html  cpu_8c.html  cpu_8h.html  cpu_8h_source.html  dir_1fe2e3f40887fbec9fd2493c34e7d145.html  dir_5af946dc53da9c500339702c4e564dc7.html  dir_5c60f3e8c3954d5c5c5ecd5ca790863c.html  dir_61f884239e7b9d662572355c29328680.html  dir_7f90c3d965de0e82fe4c04904f65e6da.html  dir_821be63df25109e5eb77dd0f2b80706a.html  dir_a5212ee8b6a8d592d027941e58e3651c.html  dir_ab51a11a65415835ab0b627ec1ba1885.html  dir_df997ef5cbe81af8266600b381d65502.html  dir_e311e002a24b0cb5a76159e0ee0c544b.html  emptyMethod_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_8c.html  globals_8h.html  globals_8h_source.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  (+113 more)
4_semester/IZG/Projekt/IZG_PROJ/doc/latex/: cpu_8c.tex  cpu_8h.tex  index.tex
4_semester/IZG/Projekt/IZG_PROJ/queue/tests/: tests.cpp
4_semester/IZG/Projekt/IZG_PROJ/stack/tests/: tests.cpp
4_semester/IZG/Projekt/IZG_PROJ/student/: cpu.c  cpu.h  drawPoints.cpp  drawTriangles.cpp  gpu.h  main.c  phongMethod.c  window.h
4_semester/IZG/Projekt/IZG_PROJ/tests/: tests.cpp
4_semester/IZG/Projekt/IZG_PROJ/tests/internalTests/: CMakeLists.txt
4_semester/IZG/Projekt/IZG_PROJ/vector/tests/: tests.cpp
(+405 files in other folders)
